--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -1,13 +1,13 @@
-name: Docker Hub description
+name: Markdown
 on:
   push:
     branches:
       - master
     paths:
       - readme.md
-      - .github/workflows/dockerhub-description.yml
+      - .github/workflows/markdown.yml
 jobs:
-  docker-hub-description:
+  markdown:
     if: github.repository == 'qdm12/youtube-dl-docker'
     runs-on: ubuntu-latest
     permissions:
